--- a/.github/workflows/main_swa-api-732.yml
+++ b/.github/workflows/main_swa-api-732.yml
@@ -7,11 +7,14 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'api-inmemory/**'
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'api-inmemory' # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '18.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
+  VERBOSE: true # For debugging
 
 jobs:
   build-and-deploy:
@@ -33,6 +36,14 @@ jobs:
           npm run build --if-present
           npm run test --if-present
           popd
+      - name: 'Upload artifact for deployment job' # For debugging
+        uses: actions/upload-artifact@v3
+        with:
+          name: azure-function-v4-app
+          path: |
+            ${{env.AZURE_FUNCTIONAPP_PACKAGE_PATH}}
+            !${{env.AZURE_FUNCTIONAPP_PACKAGE_PATH}}/node_modules
+            !${{env.AZURE_FUNCTIONAPP_PACKAGE_PATH}}/dist  
 
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
